[project]
name = "linescan-camera"
version = "0.1.0"
description = "Extract linescan images from video files"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.67.1",
]

[project.scripts]
linescan = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
